; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/hfs/extr_extent.c_hfs_ext_find_block.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/hfs/extr_extent.c_hfs_ext_find_block.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hfs_extent = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.hfs_extent*, i64)* @hfs_ext_find_block to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @hfs_ext_find_block(%struct.hfs_extent* %0, i64 %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca %struct.hfs_extent*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  %7 = alloca i64, align 8
  store %struct.hfs_extent* %0, %struct.hfs_extent** %4, align 8
  store i64 %1, i64* %5, align 8
  store i32 0, i32* %6, align 4
  br label %8

8:                                                ; preds = %30, %2
  %9 = load i32, i32* %6, align 4
  %10 = icmp slt i32 %9, 3
  br i1 %10, label %11, label %35

11:                                               ; preds = %8
  %12 = load %struct.hfs_extent*, %struct.hfs_extent** %4, align 8
  %13 = getelementptr inbounds %struct.hfs_extent, %struct.hfs_extent* %12, i32 0, i32 1
  %14 = load i32, i32* %13, align 4
  %15 = call i64 @be16_to_cpu(i32 %14)
  store i64 %15, i64* %7, align 8
  %16 = load i64, i64* %5, align 8
  %17 = load i64, i64* %7, align 8
  %18 = icmp slt i64 %16, %17
  br i1 %18, label %19, label %26

19:                                               ; preds = %11
  %20 = load %struct.hfs_extent*, %struct.hfs_extent** %4, align 8
  %21 = getelementptr inbounds %struct.hfs_extent, %struct.hfs_extent* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 4
  %23 = call i64 @be16_to_cpu(i32 %22)
  %24 = load i64, i64* %5, align 8
  %25 = add nsw i64 %23, %24
  store i64 %25, i64* %3, align 8
  br label %36

26:                                               ; preds = %11
  %27 = load i64, i64* %7, align 8
  %28 = load i64, i64* %5, align 8
  %29 = sub nsw i64 %28, %27
  store i64 %29, i64* %5, align 8
  br label %30

30:                                               ; preds = %26
  %31 = load %struct.hfs_extent*, %struct.hfs_extent** %4, align 8
  %32 = getelementptr inbounds %struct.hfs_extent, %struct.hfs_extent* %31, i32 1
  store %struct.hfs_extent* %32, %struct.hfs_extent** %4, align 8
  %33 = load i32, i32* %6, align 4
  %34 = add nsw i32 %33, 1
  store i32 %34, i32* %6, align 4
  br label %8

35:                                               ; preds = %8
  store i64 0, i64* %3, align 8
  br label %36

36:                                               ; preds = %35, %19
  %37 = load i64, i64* %3, align 8
  ret i64 %37
}

declare dso_local i64 @be16_to_cpu(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
